# Frappe-vault

./: CHANGELOG.md  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt
vault/: api.py  audit.py  hooks.py  install.py  permissions.py  scheduled.py
vault/public/css/: vault.css
vault/public/js/: vault.js
vault/tests/: test_api.py  test_scheduled.py  utils.py
vault/vault/doctype/vault_access_grant/: test_vault_access_grant.py  vault_access_grant.json  vault_access_grant.py
vault/vault/doctype/vault_access_log/: test_vault_access_log.py  vault_access_log.json  vault_access_log.py
vault/vault/doctype/vault_credential_entry/: test_vault_credential_entry.py  vault_credential_entry.js  vault_credential_entry.json  vault_credential_entry.py
vault/vault/doctype/vault_credential_group/: test_vault_credential_group.py  vault_credential_group.json  vault_credential_group.py
vault/vault/doctype/vault_credential_group_member/: vault_credential_group_member.json  vault_credential_group_member.py
vault/vault/doctype/vault_credential_tag/: vault_credential_tag.json  vault_credential_tag.py
vault/vault/doctype/vault_credential_version/: vault_credential_version.json  vault_credential_version.py
vault/vault/doctype/vault_settings/: vault_settings.json  vault_settings.py
vault/vault/workspace/vault/: vault.json
vault/workspace_sidebar/: vault.json
